@@ -1,3 +1,8 @@
+2008-03-13  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff-load.c (load_image): set a filename on the
+	image, even when not all images are imported as layers (bug #521436).
+
 2008-03-12  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/uri/uri-backend-gio.c: improved password dialog.
